--- a/css/style.css
+++ b/css/style.css
@@ -984,6 +984,10 @@ only screen and (min-width: 125em) {
     color: white;
 }
 
+.team-section h2, .advisors-section h2 {
+    margin-top: 8rem;
+}
+
 .team-section {
     max-width: 1200px;
     margin: 5rem auto;
@@ -1160,8 +1164,8 @@ only screen and (min-width: 125em) {
 }
 
 .feature-card:hover {
-    transform: translateY(-10px);
-    background-color: #f7f7f7;
+    /* transform: translateY(-10px); */
+    /* background-color: #f7f7f7; */
 }
 
 .feature-title {
@@ -1459,4 +1463,83 @@ iframe {
     .job-listing-item {
         padding: 2rem;
     }
+}
+
+
+/* News */
+
+.news-section {
+    max-width: 1200px;
+    margin: 5rem auto;
+    padding: 0 2rem;
+}
+
+.news-section h2 {
+    font-size: 3rem;
+    text-align: center;
+    margin-bottom: 3rem;
+}
+
+.news-cards {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 3rem;
+    justify-content: center;
+}
+
+.news-card {
+    background: #fff;
+    border-radius: 8px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+    padding: 2rem;
+    max-width: 500px;
+    width: 100%;
+    transition: transform 0.3s, box-shadow 0.3s;
+}
+
+.news-card:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+}
+
+.news-title {
+    font-size: 2rem;
+    font-weight: 700;
+    color: #ed4f4f;
+    margin-bottom: 1rem;
+}
+
+.news-source {
+    font-size: 1.4rem;
+    color: #555;
+    margin-bottom: 1rem;
+}
+
+.news-date {
+    font-size: 1.2rem;
+    color: #888;
+    margin-bottom: 0.5rem;
+}
+
+.footer__certifications {
+    margin-top: 2rem;
+    display: flex;
+    justify-content: left;
+    gap: 2rem;
+}
+
+.footer-cert-logo {
+    height: 80px;
+    width: auto;
+}
+
+.divider {
+    border-top: 1px solid rgba(111, 111, 111, 0.4);
+    border-bottom: none;
+    border-left: none;
+    border-right: none;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    margin-top: 10rem;
+    padding-bottom: 2rem;
 }
